Add debounce function to button click event

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         .container {
             width: 50%;
             margin: 50px auto;
-            text-align: center;
         }
 
         input {
@@ -33,6 +32,9 @@
         <input type="text" id="search" placeholder="Type here" />
 
         <p id="scroll-status">Scroll the page to test throttle</p>
+
+        <button id="debounce-btn">Click fast</button>
+        <p id="debounce-status">Click button above</p>
     </div>
 
     <script src="script.js"></script>
