Add throttle function to mouse move event

--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
         <label for="search">Type something to test debounce:</label>
         <input type="text" id="search" placeholder="Type here" />
 
-        <p id="scroll-status">Scroll the page to test throttle</p>
-
+        <p id="debounce-status">Click button below</p>
         <button id="debounce-btn">Click fast</button>
-        <p id="debounce-status">Click button above</p>
+
+        <p>Data:</p>
+        <p id="scroll-status">Scroll changed:</p>
+        <p id="page-resize">Page size:</p>
+        <p id="mouse-move">Mouse moved in:</p>
     </div>
 
     <script src="script.js"></script>
