--- a/index.html
+++ b/index.html
@@ -8,19 +8,28 @@
     <style>
         body {
             height: 2000px;
-            /* Test scroll */
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
         }
 
         .container {
             width: 50%;
             margin: 50px auto;
+            text-align: center;
         }
 
         input {
             width: 100%;
             padding: 10px;
             font-size: 16px;
+            margin-bottom: 10px;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -42,4 +51,4 @@
     <script src="script.js"></script>
 </body>
 
-</html
+</html>
