--- a/index.html
+++ b/index.html
@@ -40,15 +40,19 @@
         <label for="search">Type something to test debounce:</label>
         <input type="text" id="search" placeholder="Type here" />
 
-        <p id="debounce-status">Click button below</p>
-        <button id="debounce-btn">Click fast</button>
+        <button id="debounce-btn">Debounce</button>
+        <p id="debounce-count">0</p>
 
-        <p id="scroll-status">Scroll changed:</p>
+        <button id="throttle-btn">Throttle</button>
+        <p id="throttle-count">0</p>
+
+
+        <p id="scroll-status">Last scroll changed:</p>
         <p id="page-resize">Page size:</p>
         <p id="mouse-move">Mouse moved in:</p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script4.js"></script>
 </body>
 
 </html>
