--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p id="mouse-move">Mouse moved in:</p>
     </div>
 
-    <script src="script4.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
